# OpenCvSharp_for_Android

./: .gitignore  settings.gradle
app/: build.gradle
app/build_android/arm64-v8a/: result.txt
app/src/androidTest/java/com/example/opencvsharp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  core.cpp  core.h  core_InputArray.h  core_Mat.h  core_MatExpr.h  core_OutputArray.h  core_RNG.h  include_opencv.h  my_functions.h  my_types.h  native-lib.cpp
app/src/main/java/com/example/opencvsharp/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/opencvsharp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
